# WebChat

./: .env  .gitignore  Dockerfile  README.md  docker-compose.chat.yaml  docker-compose.yml  requirements.txt
app/migrations/: env.py
app/src/: main.py
app/src/auth/: base_config.py  manager.py  models.py  schemas.py
app/src/chat/: router.py
app/src/pages/: router.py
app/src/templates/: authentication.html  chat.html
migrations/: env.py
src/: Dockerfile  alembic.ini  database.py  main.py  pyproject.toml
src/api/: healthcheck.py  router.py
src/api/v1/: auth.py  chat.py
src/auth/: base_config.py  manager.py  models.py  schemas.py  utils.py
src/chat/: models.py  router.py
src/core/: config.py  exceptions.py  middlewares.py  oauth2_scheme.py
src/db/: session.py
src/db/migrations/: env.py
src/db/migrations/versions/: 2024_06_09_1850-8b8afa95ec64_init.py  2024_06_09_2040-6efbc3dbee98_init.py
src/db/models/: __init__.py  base.py  chat.py  user.py
src/db/repository/: auth.py  chat.py  item.py
src/pages/: router.py
src/schemas/: auth.py  item.py
src/services/: auth.py  chat.py
src/templates/: authentication.html  base.html  chat.html  login.html
src/templates/auth/: authentication.html
